--- a/tests/AIDevOps/cpu_unit_tests.yml
+++ b/tests/AIDevOps/cpu_unit_tests.yml
@@ -1,30 +1,6 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
 #
-variables:
-- group: AzureKeyVaultSecrets
-- name  : 'test'
-  value : 'tests/ci/run_pytest.py'
-- name  : 'testfolder'
-  value : './tests/unit'
-- name  : 'testmarkers'
-  value : '"not notebooks and not spark and not gpu"'
-- name  : 'junitxml'
-  value : 'reports/test-unit.xml'
-- name  : 'maxnodes'
-  value : 4
-- name  : 'reponame'
-  value : 'Recommenders'
-- name  : 'branch'
-  value : 'TestJobs'
-- name  : 'clustername'
-  value : 'reco-cpu-test2'
-- name  : 'vmsize'
-  value : 'STANDARD_D3_V2'
-- name  : 'dockerproc'
-  value : 'cpu'
-- name  : 'expname'
-  value : 'cpu_unit_tests'
 
 trigger: none
 
@@ -43,19 +19,11 @@ steps:
     architecture: 'x64'
   displayName: 'Use Python 3.6'
 
-- script: | 
-   az login --service-principal -u $(ClientID) -p $(ClientSecret) --tenant $(TenantID)
-  displayName: 'Login to Azure'
-
 - template: env-setup.yml 
 
 - script: 
-     python scripts/generate_conda_file.py --name reco 
-  displayName: ' generate_conda_file.py'
-
-- script: 
-    python tests/ci/submit_azureml_pytest.py --subid $(SubscriptionID) --testfolder $(testfolder) --testmarkers $(testmarkers) --clustername $(clustername) --expname $(expname) --dockerproc $(dockerproc) --junitxml $(junitxml) --reponame $(reponame) --branch $(branch)
-  displayName: 'submit_azureml_pytest'
+  # setup your environment and run pytest
+  displayName: 'run pytest'
 
 - task: PublishTestResults@2
   displayName: 'Publish Test Results **/test-*.xml'
